<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Teach Mate</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_actvity">LoginActvity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="SignIn">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_requests_display">RequestsDisplayActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Requests</string>
    <string name="title_section2">Responses</string>
    <string name="title_section3">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string-array name="location_selector_array">
        <item>Registered Location</item>
        <item>Current Location</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat_acitivity">ChatAcitivity</string>
    <string name="title_activity_sign_up_acticity">SignUpActicity</string>
    <string name="select_from_predefined_categories">Please select an option from the defined categories</string>
    <string name="Question_feilds_empty">The above fields cannot be empty.Please fill both the fields and retry</string>
    <string name="Posting_Question">Please wait while we post your Question</string>
    <string name="Did_not_Work">Did not work!</string>
    <string name="Load_More_Items">Load more items</string>
    <string name="Loading">loading</string>
    <string name="No_Questions_Found">No Questions found</string>
    <string name="Loading_More_Questions">loading more questions</string>
    <string name="Answered_By">Answered by</string>
    <string name="Answered_Time">Answered Time</string>
    <string name="Real_Answer">Real answer</string>
    <string name="Asked_Time">Askedtime</string>
    <string name="Username">Username</string>
    <string name="Question">Question</string>
    <string name="Your_Question">Your Question</string>
    <string name="Category">Category</string>
    <string name="Cancel">Cancel</string>
    <string name="Ask_Question">Ask</string>
    <string name="Reply_Button">Reply</string>
    <string name="Read_Later_button">Read Later</string>
    <string name="View_Saved_Questions">View Saved Questions</string>
    <string name="Title_Click_To_View_Offline">Click to view your saved questions offline</string>
    <string name="Post_Question">Post this question</string>
    <string name="Hint_Enter_Question">Enter Question</string>
    <string name="Ask_New_Question">ASK A NEW QUESTION</string>
    <string name="Hint_Enter_Category">Enter Category</string>
    <string name="Comment_Button">Comment on this</string>
    <string name="Question_id">Question_id</string>
    <string name="Questionid_isto">Question id :</string>
    <string name="Category__isto">Category :</string>

</resources>
