<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/answerforeveryquestion">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Asked_Time"
        android:textColor="#000000"
        android:fontFamily="sans"
        android:id="@+id/tvaskedtimeanswerlist_onclick"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#000000"
        android:fontFamily="sans"
        android:text="@string/Username"
        android:textStyle="bold"
        android:id="@+id/tvusernameanswerlist_onclick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Question"
        android:paddingBottom="20dp"
        android:textColor="#000000"
        android:fontFamily="sans"
        android:id="@+id/tvquestionanswerlist_onclick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Answered_Time"
        android:textColor="#000000"
        android:fontFamily="sans"
        android:id="@+id/tvanswertimeanswerlist_onclick"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/Answered_By"
        android:textColor="#000000"
        android:textStyle="bold"
        android:fontFamily="sans"
        android:id="@+id/tvansweredbyanswerlist_onclick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:fontFamily="sans"
        android:text="@string/Real_Answer"
        android:id="@+id/tvansweranswerlist_onclick" />

</LinearLayout>