<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/user_icon"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:id="@+id/imageView_myquestions"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textStyle="bold"
        android:fontFamily="sans"
        android:textColor="#000000"
        android:id="@+id/tvusername_myquestions"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView_myquestions"
        android:layout_toEndOf="@+id/imageView_myquestions" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Question_id"
        android:fontFamily="sans"

        android:textColor="#000000"
        android:id="@+id/tvquestion_id_myquestions"
        android:textSize="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:fontFamily="sans"

        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Asked_Time"
        android:id="@+id/tvaskedtime_myquestions"
        android:layout_below="@+id/tvusername_myquestions"
        android:layout_toRightOf="@+id/imageView_myquestions"
        android:layout_toEndOf="@+id/imageView_myquestions" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question"
        android:id="@+id/tvquestion_myquestions"
        android:singleLine="true"
        android:fontFamily="sans"

        android:textColor="#000000"
        android:layout_below="@+id/imageView_myquestions"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="left"
        android:id="@+id/tvcategory_myquestions"
        android:textColor="#000000"

        android:fontFamily="sans"

        android:layout_below="@+id/tvaskedtime_myquestions"
        android:layout_toRightOf="@+id/textView11"
        android:layout_toEndOf="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Questionid_isto"
        android:fontFamily="sans"

        android:textSize="10dp"
        android:textColor="#000000"

        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/tvquestion_id_myquestions"
        android:layout_toStartOf="@+id/tvquestion_id_myquestions" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Category__isto"
        android:textColor="#000000"

        android:fontFamily="sans"

        android:id="@+id/textView11"
        android:layout_alignTop="@+id/tvcategory_myquestions"
        android:layout_toRightOf="@+id/imageView_myquestions"
        android:layout_toEndOf="@+id/imageView_myquestions" />

</RelativeLayout>