<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/clicked"
    tools:context="com.teachindia.teachindia.jsonlayout.clicked">
    <ImageView
        android:src="@drawable/ic_launcher"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:fontFamily="sans"
        android:textColor="#000000"
        android:textStyle="bold"
        android:id="@+id/tvusername"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:id="@+id/tvquestion_id"
        android:textSize="10dp"
        android:fontFamily="sans"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Asked_Time"
        android:fontFamily="sans"
        android:textColor="#000000"


        android:id="@+id/tvaskedtime"
        android:layout_below="@+id/tvusername"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Question"
        android:fontFamily="sans"
        android:id="@+id/tvquestion"
        android:textColor="#000000"

        android:maxLines="4"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="30dp" />


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_below="@+id/tvquestion"
        android:layout_above="@+id/buttonlinear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:listitem="@layout/answer_single"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonlinear"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"

        android:layout_weight="1"
        android:layout_gravity="left"
        style="@style/button_text"
        android:background="@drawable/styled_button"
        android:text="@string/Reply_Button"
        android:id="@+id/answerbutton"
       />


    <Button
        android:layout_width="fill_parent"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Read_Later_button"
        android:gravity="center"
        android:layout_weight="1"
        style="@style/button_text"
        android:background="@drawable/styled_button"
        android:layout_gravity="right"
        android:id="@+id/addtodb"
      />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Category"
        android:textColor="#000000"
        android:fontFamily="sans"
        android:id="@+id/tvcategory_clicked"
        android:layout_below="@+id/tvaskedtime"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />


</RelativeLayout>
