<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/layoutProfilePhoto"
        android:padding="3dip"
        android:background="@drawable/image_bg"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/user_icon"

            android:layout_width="90dp"
            android:layout_height="85dp"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="1dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textStyle="bold"
        android:fontFamily="sans"
        android:textColor="#000000"
        android:id="@+id/tvusernamefromdb"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/layoutProfilePhoto"
        android:layout_toEndOf="@+id/layoutProfilePhoto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvquestion_idfromdb"

        android:fontFamily="sans"
        android:textColor="#000000"
        android:textSize="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignBottom="@+id/tvusernamefromdb"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/Asked_Time"
        android:id="@+id/tvaskedtimefromdb"
        android:layout_below="@+id/tvusernamefromdb"
        android:layout_toRightOf="@+id/layoutProfilePhoto"
        android:layout_toEndOf="@+id/layoutProfilePhoto" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question"
        android:id="@+id/tvquestionfromdb"
        android:singleLine="true"
        android:maxLines="4"
        android:fontFamily="sans"
        android:textColor="#000000"
        android:layout_below="@+id/layoutProfilePhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:fontFamily="sans"
        android:textColor="#000000"
        android:text="@string/Category"
        android:id="@+id/tvcategoryfromdb"
        android:layout_below="@+id/tvaskedtimefromdb"
        android:layout_toRightOf="@+id/layoutProfilePhoto"
        android:layout_toEndOf="@+id/layoutProfilePhoto" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:id="@+id/imagearrow"
        android:layout_alignTop="@+id/tvcategoryfromdb"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:fontFamily="sans"
        android:textColor="#000000"
        android:textSize="10dp"
        android:text="@string/Question_id"
        android:id="@+id/tvquestiodidstring"
        android:layout_alignRight="@+id/tvquestion_idfromdb"
        android:layout_alignEnd="@+id/tvquestion_idfromdb" />

</RelativeLayout>